[package]
name = "teensyds"
version = "0.1.0"
authors = ["Geoff Cant <nem@erlang.geek.nz>", "Paul Osborne <osbpau@gmail.com>"]

[dependencies.zinc]
path = "../zinc"
#git = "https://github.com/archaelus/zinc.git"
#branch = "k20_72"
features = ["mcu_k20"]

[dependencies.rust-libcore]
version = "*"

[profile.dev]
debug = true

[[bin]]
name = "dotstar"
path = "dotstar.rs"
